more overflow fixes

--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -117,15 +117,6 @@ body.single-page-mode #appMount {
     z-index: 9999;
 }
 
-.content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-    /* position: relative; */
-    z-index: 1;
-}
-
 .title {
     user-select: none;
 
